--- a/spec/screenshot/footer.html
+++ b/spec/screenshot/footer.html
@@ -13,7 +13,7 @@
   <div class="l-wrapper">
     <div class="l-header">
       <div class="nav-utility">
-        <div class="l-content">
+        <div class="l-container">
             <ul class="nav">
               <li><a href="#">Link One</a></li>
               <li><a href="#">Link Two</a></li>
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="nav-primary">
-        <div class="l-content">
+        <div class="l-container">
           <div class="nav-brand">
             <a href="#"><span></span></a>
           </div>
@@ -39,7 +39,7 @@
     </div>
     <div class="l-body">
       <div class="l-inner">
-        <div class="l-content">
+        <div class="l-container">
 
         </div>
       </div>
@@ -48,7 +48,7 @@
   </div>
   <div class="l-footer">
     <div class="l-inner">
-      <div class="footer l-content">
+      <div class="footer l-container">
         <ul class="links">
           <li>&copy; 2013 Rackspace, US</li>
           <li><a href="">Link Text</a></li>
