--- a/spec/screenshot/grid.html
+++ b/spec/screenshot/grid.html
@@ -18,7 +18,7 @@
   <div class="l-wrapper">
     <div class="l-header">
       <div class="nav-utility">
-        <div class="l-content">
+        <div class="l-container">
             <ul class="nav">
               <li><a href="#">Link One</a></li>
               <li><a href="#">Link Two</a></li>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="nav-primary">
-        <div class="l-content">
+        <div class="l-container">
           <div class="nav-brand">
             <a href="#"><span></span></a>
           </div>
@@ -44,7 +44,7 @@
     </div>
     <div class="l-body">
       <div class="l-inner">
-        <div class="l-content show-grid">
+        <div class="l-container show-grid">
           <p>12 column grid</p>
           <div class="row">
             <div class="span-12" style="background: #b8b8b8; margin-bottom: 10px;">.full or .span-12</div>
@@ -94,7 +94,7 @@
             <div class="span-1 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-1</div>
           </div>
         </div>
-        <div class="l-content show-grid">
+        <div class="l-container show-grid">
           <p>Nested Grid</p>
           <div class="span-5" style="background: #b8b8b8; margin-bottom: 10px;">
             <p>.span-5</p>
@@ -113,7 +113,7 @@
   </div>
   <div class="l-footer">
     <div class="l-inner">
-      <div class="footer l-content">
+      <div class="footer l-container">
         <ul class="links">
           <li>&copy; 2013 Rackspace, US</li>
           <li><a href="">Link Text</a></li>
