--- a/examples/grid.html
+++ b/examples/grid.html
@@ -11,7 +11,7 @@
     .show-grid {
       text-align: center;
     }
-    .l-content {
+    .l-container {
       background-image: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(0%, rgba(100, 100, 225, 0.25)), color-stop(6.69643%, rgba(100, 100, 225, 0.25)), color-stop(6.69643%, rgba(0, 0, 0, 0)), color-stop(8.48214%, rgba(0, 0, 0, 0)), color-stop(8.48214%, rgba(100, 100, 225, 0.25)), color-stop(15.17857%, rgba(100, 100, 225, 0.25)), color-stop(15.17857%, rgba(0, 0, 0, 0)), color-stop(16.96429%, rgba(0, 0, 0, 0)), color-stop(16.96429%, rgba(100, 100, 225, 0.25)), color-stop(23.66071%, rgba(100, 100, 225, 0.25)), color-stop(23.66071%, rgba(0, 0, 0, 0)), color-stop(25.44643%, rgba(0, 0, 0, 0)), color-stop(25.44643%, rgba(100, 100, 225, 0.25)), color-stop(32.14286%, rgba(100, 100, 225, 0.25)), color-stop(32.14286%, rgba(0, 0, 0, 0)), color-stop(33.92857%, rgba(0, 0, 0, 0)), color-stop(33.92857%, rgba(100, 100, 225, 0.25)), color-stop(40.625%, rgba(100, 100, 225, 0.25)), color-stop(40.625%, rgba(0, 0, 0, 0)), color-stop(42.41071%, rgba(0, 0, 0, 0)), color-stop(42.41071%, rgba(100, 100, 225, 0.25)), color-stop(49.10714%, rgba(100, 100, 225, 0.25)), color-stop(49.10714%, rgba(0, 0, 0, 0)), color-stop(50.89286%, rgba(0, 0, 0, 0)), color-stop(50.89286%, rgba(100, 100, 225, 0.25)), color-stop(57.58929%, rgba(100, 100, 225, 0.25)), color-stop(57.58929%, rgba(0, 0, 0, 0)), color-stop(59.375%, rgba(0, 0, 0, 0)), color-stop(59.375%, rgba(100, 100, 225, 0.25)), color-stop(66.07143%, rgba(100, 100, 225, 0.25)), color-stop(66.07143%, rgba(0, 0, 0, 0)), color-stop(67.85714%, rgba(0, 0, 0, 0)), color-stop(67.85714%, rgba(100, 100, 225, 0.25)), color-stop(74.55357%, rgba(100, 100, 225, 0.25)), color-stop(74.55357%, rgba(0, 0, 0, 0)), color-stop(76.33929%, rgba(0, 0, 0, 0)), color-stop(76.33929%, rgba(100, 100, 225, 0.25)), color-stop(83.03571%, rgba(100, 100, 225, 0.25)), color-stop(83.03571%, rgba(0, 0, 0, 0)), color-stop(84.82143%, rgba(0, 0, 0, 0)), color-stop(84.82143%, rgba(100, 100, 225, 0.25)), color-stop(91.51786%, rgba(100, 100, 225, 0.25)), color-stop(91.51786%, rgba(0, 0, 0, 0)), color-stop(93.30357%, rgba(0, 0, 0, 0)), color-stop(93.30357%, rgba(100, 100, 225, 0.25)), color-stop(100%, rgba(100, 100, 225, 0.25)), color-stop(100%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0)));
       background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(100, 100, 225, 0.25) 0%, rgba(100, 100, 225, 0.25) 6.69643%, rgba(0, 0, 0, 0) 6.69643%, rgba(0, 0, 0, 0) 8.48214%, rgba(100, 100, 225, 0.25) 8.48214%, rgba(100, 100, 225, 0.25) 15.17857%, rgba(0, 0, 0, 0) 15.17857%, rgba(0, 0, 0, 0) 16.96429%, rgba(100, 100, 225, 0.25) 16.96429%, rgba(100, 100, 225, 0.25) 23.66071%, rgba(0, 0, 0, 0) 23.66071%, rgba(0, 0, 0, 0) 25.44643%, rgba(100, 100, 225, 0.25) 25.44643%, rgba(100, 100, 225, 0.25) 32.14286%, rgba(0, 0, 0, 0) 32.14286%, rgba(0, 0, 0, 0) 33.92857%, rgba(100, 100, 225, 0.25) 33.92857%, rgba(100, 100, 225, 0.25) 40.625%, rgba(0, 0, 0, 0) 40.625%, rgba(0, 0, 0, 0) 42.41071%, rgba(100, 100, 225, 0.25) 42.41071%, rgba(100, 100, 225, 0.25) 49.10714%, rgba(0, 0, 0, 0) 49.10714%, rgba(0, 0, 0, 0) 50.89286%, rgba(100, 100, 225, 0.25) 50.89286%, rgba(100, 100, 225, 0.25) 57.58929%, rgba(0, 0, 0, 0) 57.58929%, rgba(0, 0, 0, 0) 59.375%, rgba(100, 100, 225, 0.25) 59.375%, rgba(100, 100, 225, 0.25) 66.07143%, rgba(0, 0, 0, 0) 66.07143%, rgba(0, 0, 0, 0) 67.85714%, rgba(100, 100, 225, 0.25) 67.85714%, rgba(100, 100, 225, 0.25) 74.55357%, rgba(0, 0, 0, 0) 74.55357%, rgba(0, 0, 0, 0) 76.33929%, rgba(100, 100, 225, 0.25) 76.33929%, rgba(100, 100, 225, 0.25) 83.03571%, rgba(0, 0, 0, 0) 83.03571%, rgba(0, 0, 0, 0) 84.82143%, rgba(100, 100, 225, 0.25) 84.82143%, rgba(100, 100, 225, 0.25) 91.51786%, rgba(0, 0, 0, 0) 91.51786%, rgba(0, 0, 0, 0) 93.30357%, rgba(100, 100, 225, 0.25) 93.30357%, rgba(100, 100, 225, 0.25) 100%, rgba(0, 0, 0, 0) 100%, rgba(0, 0, 0, 0) 100%);
       background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(100, 100, 225, 0.25) 0%, rgba(100, 100, 225, 0.25) 6.69643%, rgba(0, 0, 0, 0) 6.69643%, rgba(0, 0, 0, 0) 8.48214%, rgba(100, 100, 225, 0.25) 8.48214%, rgba(100, 100, 225, 0.25) 15.17857%, rgba(0, 0, 0, 0) 15.17857%, rgba(0, 0, 0, 0) 16.96429%, rgba(100, 100, 225, 0.25) 16.96429%, rgba(100, 100, 225, 0.25) 23.66071%, rgba(0, 0, 0, 0) 23.66071%, rgba(0, 0, 0, 0) 25.44643%, rgba(100, 100, 225, 0.25) 25.44643%, rgba(100, 100, 225, 0.25) 32.14286%, rgba(0, 0, 0, 0) 32.14286%, rgba(0, 0, 0, 0) 33.92857%, rgba(100, 100, 225, 0.25) 33.92857%, rgba(100, 100, 225, 0.25) 40.625%, rgba(0, 0, 0, 0) 40.625%, rgba(0, 0, 0, 0) 42.41071%, rgba(100, 100, 225, 0.25) 42.41071%, rgba(100, 100, 225, 0.25) 49.10714%, rgba(0, 0, 0, 0) 49.10714%, rgba(0, 0, 0, 0) 50.89286%, rgba(100, 100, 225, 0.25) 50.89286%, rgba(100, 100, 225, 0.25) 57.58929%, rgba(0, 0, 0, 0) 57.58929%, rgba(0, 0, 0, 0) 59.375%, rgba(100, 100, 225, 0.25) 59.375%, rgba(100, 100, 225, 0.25) 66.07143%, rgba(0, 0, 0, 0) 66.07143%, rgba(0, 0, 0, 0) 67.85714%, rgba(100, 100, 225, 0.25) 67.85714%, rgba(100, 100, 225, 0.25) 74.55357%, rgba(0, 0, 0, 0) 74.55357%, rgba(0, 0, 0, 0) 76.33929%, rgba(100, 100, 225, 0.25) 76.33929%, rgba(100, 100, 225, 0.25) 83.03571%, rgba(0, 0, 0, 0) 83.03571%, rgba(0, 0, 0, 0) 84.82143%, rgba(100, 100, 225, 0.25) 84.82143%, rgba(100, 100, 225, 0.25) 91.51786%, rgba(0, 0, 0, 0) 91.51786%, rgba(0, 0, 0, 0) 93.30357%, rgba(100, 100, 225, 0.25) 93.30357%, rgba(100, 100, 225, 0.25) 100%, rgba(0, 0, 0, 0) 100%, rgba(0, 0, 0, 0) 100%);
@@ -29,7 +29,7 @@
     }
     @media (min-width: 1400px) {
       /* line 195, /Users/eddy/Rackspace/code/canon/canon/lib/canon/stylesheets/_layout.scss */
-      .l-content {
+      .l-container {
         padding-left: 60px;
         padding-right: 60px;
         margin-left: auto;
@@ -50,7 +50,7 @@
         background-clip: content-box;
       }
       /* line 38, /Users/eddy/.rbenv/versions/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
-      .l-content:after {
+      .l-container:after {
         content: "";
         display: table;
         clear: both;
@@ -58,7 +58,7 @@
     }
     @media (min-width: 641px) and (max-width: 960px) {
       /* line 205, /Users/eddy/Rackspace/code/canon/canon/lib/canon/stylesheets/_layout.scss */
-      .l-content {
+      .l-container {
         padding-left: 20px;
         padding-right: 20px;
         margin-left: auto;
@@ -79,7 +79,7 @@
         background-clip: content-box;
       }
       /* line 38, /Users/eddy/.rbenv/versions/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
-      .l-content:after {
+      .l-container:after {
         content: "";
         display: table;
         clear: both;
@@ -87,7 +87,7 @@
     }
     @media (min-width: 1px) and (max-width: 640px) {
       /* line 215, /Users/eddy/Rackspace/code/canon/canon/lib/canon/stylesheets/_layout.scss */
-      .l-content {
+      .l-container {
         padding-left: 10px;
         padding-right: 10px;
         margin-left: auto;
@@ -108,7 +108,7 @@
         background-clip: content-box;
       }
       /* line 38, /Users/eddy/.rbenv/versions/1.9.3-p327/lib/ruby/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
-      .l-content:after {
+      .l-container:after {
         content: "";
         display: table;
         clear: both;
@@ -121,7 +121,7 @@
   <div class="l-wrapper">
     <div class="l-header">
       <div class="nav-utility">
-        <div class="l-content">
+        <div class="l-container">
             <ul class="nav">
               <li><a href="#">Link One</a></li>
               <li><a href="#">Link Two</a></li>
@@ -130,7 +130,7 @@
         </div>
       </div>
       <div class="nav-primary">
-        <div class="l-content">
+        <div class="l-container">
           <div class="nav-brand">
             <a href="#"><span></span></a>
           </div>
@@ -147,7 +147,7 @@
     </div>
     <div class="l-body">
       <div class="l-inner">
-        <div class="l-content show-grid">
+        <div class="l-container show-grid">
           <div class="main">
             <div class="sidebar pull-right">
               <div>
@@ -311,7 +311,7 @@
   </div>
   <div class="l-footer">
     <div class="l-inner">
-      <div class="footer l-content">
+      <div class="footer l-container">
         <ul class="links">
           <li>&copy; 2013 Rackspace, US</li>
           <li><a href="">Link Text</a></li>
