--- a/spec/screenshot/nav-secondary.html
+++ b/spec/screenshot/nav-secondary.html
@@ -12,7 +12,7 @@
 <body>
   <div class="l-wrapper">
     <div class="nav-utility">
-      <div class="l-content">
+      <div class="l-container">
           <ul class="nav">
             <li><a href="#">Link One</a></li>
             <li><a href="#">Link Two</a></li>
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="nav-primary">
-      <div class="l-content">
+      <div class="l-container">
         <div class="nav-brand">
           <a href="#"><span></span></a>
         </div>
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="nav-secondary">
-      <div class="l-content">
+      <div class="l-container">
         <ul class="nav">
           <li><a href="#">Link One</a></li>
           <li class="active"><a href="#">Link Two</a></li>
@@ -49,7 +49,7 @@
     </div>
     <div class="l-body">
       <div class="l-inner">
-        <div class="l-content">
+        <div class="l-container">
         </div>
       </div>
     </div>
@@ -57,7 +57,7 @@
   </div>
   <div class="l-footer">
     <div class="l-inner">
-      <div class="l-content"></div>
+      <div class="l-container"></div>
     </div>
   </div>
 </body>
