--- a/spec/unit/runner.html
+++ b/spec/unit/runner.html
@@ -9,7 +9,21 @@
 
   <script type="text/javascript" src="/vendor/chai/chai.js"></script>
   <script type="text/javascript" src="/vendor/mocha/mocha.js"></script>
-  <script type="text/javascript" src="/vendor/sinon/lib/sinon.js"></script>
+  <script type="text/javascript" src="/vendor/mocha-sinon/sinon-1.6.0.js"></script>
+
+  <!-- Setup Mocha, Chai, and Sinon before any libraries that depend on them. -->
+  <script type="text/javascript">
+
+    var should;
+
+    mocha.reporter('html');
+    mocha.setup('bdd');
+    chai.Assertion.includeStack = true;
+    should = chai.should();
+
+  </script>
+
+  <script type="text/javascript" src="/vendor/mocha-sinon/mocha-sinon.js"></script>
   <script type="text/javascript" src="/vendor/sinon-chai/lib/sinon-chai.js"></script>
   <script type="text/javascript" src="/vendor/requirejs/require.js"></script>
 </head>
@@ -18,14 +32,8 @@
 
   <script type="text/javascript">
 
-    var should, specs;
+    var specs = [];
 
-    mocha.reporter('html');
-    mocha.setup('bdd');
-    chai.Assertion.includeStack = true;
-    should = chai.should();
-
-    specs = [];
     specs.push('canon_spec');
 
     requirejs.config({ paths: { 'canon': '../assets/canon' } });
