[Feature][81] Add event helper functions.

--- a/spec/unit/runner.html
+++ b/spec/unit/runner.html
@@ -36,6 +36,7 @@
 
     specs.push('canon_spec');
     specs.push('dom_spec');
+    specs.push('events_spec');
 
     requirejs.config({
       paths: {
