--- a/spec/unit/runner.html
+++ b/spec/unit/runner.html
@@ -11,14 +11,15 @@
   <script type="text/javascript" src="/vendor/mocha/mocha.js"></script>
   <script type="text/javascript" src="/vendor/mocha-sinon/sinon-1.6.0.js"></script>
 
-  <!-- Setup Mocha, Chai, and Sinon before any libraries that depend on them. -->
   <script type="text/javascript">
 
-    var should;
+    var expect, should;
 
     mocha.reporter('html');
     mocha.setup('bdd');
     chai.Assertion.includeStack = true;
+
+    expect = chai.expect;
     should = chai.should();
 
   </script>
@@ -29,14 +30,18 @@
 </head>
 <body>
   <div id="mocha"></div>
+  <div id="fixture"></div>
 
   <script type="text/javascript">
 
-    var specs = [];
+    var fixture, specs = [];
+
+    fixture = document.getElementById('fixture');
 
     specs.push('canon_spec');
     specs.push('dom_spec');
     specs.push('events_spec');
+    specs.push('content_section_spec');
 
     requirejs.config({
       paths: {
@@ -53,6 +58,12 @@
       }
       else {
         mocha.run();
+      }
+    });
+
+    afterEach(function () {
+      while (fixture.hasChildNodes()) {
+        fixture.removeChild(fixture.lastChild);
       }
     });
 
