[Feature][87] Reskin Navigation
Merge branch 'reskin-navigation'

--- a/examples/demos/layout.html
+++ b/examples/demos/layout.html
@@ -23,7 +23,7 @@
       <div class="nav-primary">
         <div class="l-container">
           <div class="nav-brand">
-            <a href="#"><span></span></a>
+            <a href="#"></a>
           </div>
           <ul class="nav">
             <li><a href="#">Link One</a></li>
