--- a/examples/screenshots/layout.html
+++ b/examples/screenshots/layout.html
@@ -23,7 +23,7 @@
       <div class="nav-primary">
         <div class="l-container">
           <div class="nav-brand">
-            <a href="#"><span></span></a>
+            <a href="#"></a>
           </div>
           <ul class="nav">
             <li><a href="#">Link One</a></li>
