add panel class to sidebar

--- a/examples/demos/grid.html
+++ b/examples/demos/grid.html
@@ -41,7 +41,7 @@
     </div>
     <div class="l-body">
       <div class="l-container show-grid">
-        <div class="main">
+        <div class="main panel">
           <div class="sidebar pull-right">
             <div>
               <p>3 column grid via nested classes</p>
