--- a/examples/screenshots/content-detail.html
+++ b/examples/screenshots/content-detail.html
@@ -36,7 +36,7 @@
     </div>
     <div class="l-body">
       <div class="l-container">
-        <div class="main">
+        <div class="main panel">
           <div class="sidebar pull-right">
             <div></div>
           </div>
