add class sidebar-inner to demo and screenshots

--- a/examples/screenshots/content-detail.html
+++ b/examples/screenshots/content-detail.html
@@ -38,7 +38,7 @@
       <div class="l-container">
         <div class="main panel">
           <div class="sidebar pull-right">
-            <div></div>
+            <div class="sidebar-inner"></div>
           </div>
           <div class="content">
             <div></div>
