--- a/examples/screenshots/content-list.html
+++ b/examples/screenshots/content-list.html
@@ -38,7 +38,7 @@
       <div class="l-container">
         <div class="main">
           <div class="sidebar">
-            <div></div>
+            <div class="sidebar-inner"></div>
           </div>
           <div class="content">
             <div></div>
