--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
-<body>
+<body style="background: #fff;">
   <div class="list-table">
     <table>
       <thead>
