--- a/examples/demos/grid.html
+++ b/examples/demos/grid.html
@@ -43,7 +43,7 @@
       <div class="l-container show-grid">
         <div class="main panel">
           <div class="sidebar pull-right">
-            <div class="sidebar-inner">
+            <div class="inner">
               <p>3 column grid via nested classes</p>
               <div class="row">
                 <div class="span-3-3" style="background: #b8b8b8; margin-bottom: 10px;">.full or .span-3-3</div>
@@ -55,7 +55,7 @@
             </div>
           </div>
           <div class="content">
-            <div>
+            <div class="inner">
               <p>12 column grid</p>
               <div class="row">
                 <div class="span-12" style="background: #b8b8b8; margin-bottom: 10px;">.full or .span-12</div>
