[Maintenance][97] Extract common component functionality into base class.

--- a/spec/runner.html
+++ b/spec/runner.html
@@ -39,6 +39,7 @@
     fixture = document.getElementById('fixture');
 
     specs.push('unit/canon_spec');
+    specs.push('unit/canon/core/component_spec');
     specs.push('unit/canon/content_section_spec');
 
     requirejs.config({
@@ -51,7 +52,8 @@
         'qwery': '../vendor/ender-amd/node_modules/qwery/qwery',
         'bean-ender': '../vendor/ender-amd/lib/bean-ender',
         'bonzo-ender': '../vendor/ender-amd/lib/bonzo-ender',
-        'qwery-ender': '../vendor/ender-amd/lib/qwery-ender'
+        'qwery-ender': '../vendor/ender-amd/lib/qwery-ender',
+        'klass': '../vendor/klass/klass'
       }
     });
 
