[Feature][97] Add Tooltip component.

--- a/examples/functional/content-section.html
+++ b/examples/functional/content-section.html
@@ -65,7 +65,8 @@
         'qwery': '../vendor/ender-amd/node_modules/qwery/qwery',
         'bean-ender': '../vendor/ender-amd/lib/bean-ender',
         'bonzo-ender': '../vendor/ender-amd/lib/bonzo-ender',
-        'qwery-ender': '../vendor/ender-amd/lib/qwery-ender'
+        'qwery-ender': '../vendor/ender-amd/lib/qwery-ender',
+        'klass': '../vendor/klass/klass'
       }
     });
 
