[Feature][97] Animate tooltip transitions.

--- a/examples/screenshots/tooltip.html
+++ b/examples/screenshots/tooltip.html
@@ -16,7 +16,7 @@
         Tooltips are hidden by default.
       </div>
     </div>
-    <div class="tooltip" style="display: block;">
+    <div class="tooltip visible">
       <div class="tooltip-inner">
         This tooltip is visible.
       </div>
