--- a/examples/screenshots/layout.html
+++ b/examples/screenshots/layout.html
@@ -27,8 +27,25 @@
         <ul class="nav">
           <li><a href="#">Link One</a></li>
           <li class="active"><a href="#">Link Two</a></li>
-          <li><a href="#">Link Three</a></li>
-          <li><a href="#">Link Four</a></li>
+          <li class="dropdown">
+            <a href="#">Link Three <i class="dropdown-toggle"></i></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">One</a></li>
+              <li><a href="#">One</a></li>
+              <li><a href="#">One</a></li>
+            </ul>
+          </li>
+          <li class="dropdown active">
+            <a href="#">Link Four <i class="dropdown-toggle"></i></a>
+            <ul class="dropdown-menu visible">
+              <li><span class="dropdown-category">Category</span></li>
+              <li><a href="#">One</a></li>
+              <li><a href="#">Two</a></li>
+              <li>
+                <a href="#">This is a really long link <i class="icon-external"></i> <span class="dropdown-caption">And I have a caption.</a>
+              </li>
+            </ul>
+          </li>
           <li><a href="#">Link Five</a></li>
           <li><a href="#">Link Six</a></li>
         </ul>
