[Feature][104] Scope primary dropdown styles.

--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -10,7 +10,7 @@
 </head>
 <body style="background: #fff;">
   <div style="padding: 40px;">
-    <div class="dropdown">
+    <div class="dropdown primary-dropdown">
       <a href="#" class="btn dropdown-toggle">Primary Menu (Hidden)</a>
       <ul class="dropdown-menu">
         <li><span class="dropdown-category">Links</span></li>
@@ -24,7 +24,7 @@
         <li><a href="#" class="hover">Link (Hover) <span class="dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
-    <div class="dropdown">
+    <div class="dropdown primary-dropdown">
       <a href="#" class="btn dropdown-toggle">Primary Menu (Visible)</a>
       <ul class="dropdown-menu visible">
         <li><span class="dropdown-category">Links</span></li>
