--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -10,6 +10,28 @@
 </head>
 <body style="background: #fff;">
   <div style="padding: 40px;">
+    <div class="dropdown">
+      <a href="#" class="btn dropdown-toggle">Action Menu (Hidden)</a>
+      <ul class="dropdown-menu">
+        <li><span class="dropdown-category">Links</span></li>
+        <li><a href="#">One</a></li>
+        <li><a href="#">Two</a></li>
+        <li><span class="dropdown-category">More Links</span></li>
+        <li><a href="#">Three</a></li>
+        <li><a href="#">Four</a></li>
+      </ul>
+    </div>
+    <div class="dropdown">
+      <a href="#" class="btn dropdown-toggle">Action Menu (Visible)</a>
+      <ul class="dropdown-menu visible">
+        <li><span class="dropdown-category">Links</span></li>
+        <li><a href="#">One</a></li>
+        <li><a href="#">Two</a></li>
+        <li><span class="dropdown-category">More Links</span></li>
+        <li><a href="#">Three</a></li>
+        <li><a href="#">Four</a></li>
+      </ul>
+    </div>
     <div class="dropdown primary-dropdown">
       <a href="#" class="btn dropdown-toggle">Primary Menu (Hidden)</a>
       <ul class="dropdown-menu">
