[Feature][108] Dropdown menu widget.

--- a/spec/runner.html
+++ b/spec/runner.html
@@ -41,6 +41,7 @@
     specs.push('unit/canon_spec');
     specs.push('unit/canon/core/component_spec');
     specs.push('unit/canon/content_section_spec');
+    specs.push('unit/canon/menu_spec');
     specs.push('unit/canon/tooltip_spec');
 
     requirejs.config({
