add utility dropdown

--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -32,6 +32,36 @@
         <li><a href="#">Four</a></li>
       </ul>
     </div>
+    <div class="dropdown utility-dropdown">
+      <a href="#" class="btn dropdown-toggle">Utility Menu (Hidden)</a>
+      <ul class="dropdown-menu">
+        <li><span>Non Link Text</span></li>
+        <li class="divider"></li>
+        <li><a href="#">Link</a></li>
+        <li><a href="#" class="hover">Link (Hover)</a></li>
+        <li class="divider"></li>
+        <li><a href="#">Link External <i class="icon-external"></i></a></li>
+        <li><a href="#" class="hover">Link External (Hover) <i class="icon-external"></i></a></li>
+        <li class="divider"></li>
+        <li><a href="#">Link <span class="dropdown-caption">With Caption</span></a></li>
+        <li><a href="#" class="hover">Link (Hover) <span class="dropdown-caption">With Caption</span></a></li>
+      </ul>
+    </div>
+    <div class="dropdown utility-dropdown">
+      <a href="#" class="btn dropdown-toggle">Utility Menu (Visible)</a>
+      <ul class="dropdown-menu visible">
+        <li><span>Non Link Text</span></li>
+        <li class="divider"></li>
+        <li><a href="#">Link</a></li>
+        <li><a href="#" class="hover">Link (Hover)</a></li>
+        <li class="divider"></li>
+        <li><a href="#">Link External <i class="icon-external"></i></a></li>
+        <li><a href="#" class="hover">Link External (Hover) <i class="icon-external"></i></a></li>
+        <li class="divider"></li>
+        <li><a href="#">Link <span class="dropdown-caption">With Caption</span></a></li>
+        <li><a href="#" class="hover">Link (Hover) <span class="dropdown-caption">With Caption</span></a></li>
+      </ul>
+    </div>
     <div class="dropdown primary-dropdown">
       <a href="#" class="btn dropdown-toggle">Primary Menu (Hidden)</a>
       <ul class="dropdown-menu">
