--- a/examples/screenshots/layout.html
+++ b/examples/screenshots/layout.html
@@ -27,7 +27,7 @@
         <ul class="nav">
           <li><a href="#">Link One</a></li>
           <li class="active"><a href="#">Link Two</a></li>
-          <li class="dropdown">
+          <li class="dropdown primary-dropdown">
             <a href="#">Link Three <i class="dropdown-toggle"></i></a>
             <ul class="dropdown-menu">
               <li><a href="#">One</a></li>
@@ -35,7 +35,7 @@
               <li><a href="#">One</a></li>
             </ul>
           </li>
-          <li class="dropdown active">
+          <li class="dropdown primary-dropdown active">
             <a href="#">Link Four <i class="dropdown-toggle"></i></a>
             <ul class="dropdown-menu visible">
               <li><span class="dropdown-category">Category</span></li>
