updating .tabs to .nav-tabs

--- a/examples/screenshots/nav-tabs.html
+++ b/examples/screenshots/nav-tabs.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
 <body style="background: #fff; padding: 50px;">
-  <ul class="nav tabs">
+  <ul class="nav nav-tabs">
     <li><a href="#one">One <span class="quiet">(1)</span></a></li>
     <li class="active"><a href="#two">Two <span class="quiet">(2)</span></a></li>
     <li><a href="#three">Three <span class="quiet">(3)</span></a></li>
