--- a/spec/runner.html
+++ b/spec/runner.html
@@ -27,6 +27,7 @@
   <script type="text/javascript" src="/vendor/mocha-sinon/mocha-sinon.js"></script>
   <script type="text/javascript" src="/vendor/sinon-chai/lib/sinon-chai.js"></script>
   <script type="text/javascript" src="/vendor/requirejs/require.js"></script>
+  <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
 </head>
 <body>
   <div id="mocha"></div>
@@ -47,14 +48,6 @@
     requirejs.config({
       paths: {
         'canon': '../assets/canon',
-        'ender-amd': '../vendor/ender-amd/lib/ender-amd',
-        'ender': '../vendor/ender-amd/lib/ender',
-        'bean': '../vendor/ender-amd/node_modules/bean/bean',
-        'bonzo': '../vendor/ender-amd/node_modules/bonzo/bonzo',
-        'qwery': '../vendor/ender-amd/node_modules/qwery/qwery',
-        'bean-ender': '../vendor/ender-amd/lib/bean-ender',
-        'bonzo-ender': '../vendor/ender-amd/lib/bonzo-ender',
-        'qwery-ender': '../vendor/ender-amd/lib/qwery-ender',
         'klass': '../vendor/klass/klass'
       }
     });
