adding the responsive and fixed-top classes across all pages

--- a/examples/demos/layout.html
+++ b/examples/demos/layout.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
 <body>
+<body class="responsive">
   <div class="l-wrapper">
     <div class="nav-utility">
       <div class="l-container">
