--- a/examples/screenshots/colors.html
+++ b/examples/screenshots/colors.html
@@ -35,7 +35,7 @@
     }
   </style>
 </head>
-<body style="background: #fff;">
+<body class="responsive" style="background: #fff;">
   <ul class="palette">
     <li class="dark" style="background: #e3e3e3;">#e3e3e3 <span>$grey50</span></li>
     <li class="dark" style="background: #d8d8d8;">#d8d8d8 <span>$grey100</span></li>
