--- a/examples/screenshots/content-view.html
+++ b/examples/screenshots/content-view.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
-<body style="background: #fff;">
+<body class="responsive" style="background: #fff;">
   <div class="content-view">
     <div class="header-section">
       <div class="header-section-actions">
