--- a/examples/screenshots/popover.html
+++ b/examples/screenshots/popover.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
-<body style="background: #fff;">
+<body class="responsive" style="background: #fff;">
   <div style="padding: 40px;">
     <div class="popover">
       <div class="popover-arrow popover-arrow-left-top"></div>
