--- a/examples/screenshots/tooltip.html
+++ b/examples/screenshots/tooltip.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
-<body>
+<body class="responsive">
   <div style="padding: 40px">
     <p><i class="icon-help"></i></p>
     <div class="tooltip">
