--- a/examples/demos/grid.html
+++ b/examples/demos/grid.html
@@ -13,9 +13,9 @@
     }
   </style>
 </head>
-<body>
+<body class="responsive">
   <div class="l-wrapper">
-    <div class="nav-utility">
+    <div class="nav-utility fixed-top">
       <div class="l-container">
           <ul class="nav">
             <li><a href="#">Link One</a></li>
@@ -24,7 +24,7 @@
           </ul>
       </div>
     </div>
-    <div class="nav-primary">
+    <div class="nav-primary fixed-top">
       <div class="l-container">
         <div class="nav-brand">
           <a href="#"></a>
