--- a/examples/functional/content-section.html
+++ b/examples/functional/content-section.html
@@ -25,7 +25,7 @@
 
   </style>
 </head>
-<body>
+<body class="responsive">
   <div class="container">
     <div class="controls">
       <button class="btn" onclick="javascript: attach();">Attach</button>
