--- a/examples/screenshots/buttons.html
+++ b/examples/screenshots/buttons.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
-<body style="background: #fff;">
+<body class="responsive" style="background: #fff;">
   <!-- DEFAULT BUTTONS -->
   <!-- Button Tag -->
   <p>
