--- a/examples/screenshots/layout.html
+++ b/examples/screenshots/layout.html
@@ -8,9 +8,9 @@
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
-<body>
+<body class="responsive">
   <div class="l-wrapper">
-    <div class="nav-utility">
+    <div class="nav-utility fixed-top">
       <div class="l-container">
           <ul class="nav">
             <li><a href="#">Link One</a></li>
@@ -19,7 +19,7 @@
           </ul>
       </div>
     </div>
-    <div class="nav-primary">
+    <div class="nav-primary fixed-top">
       <div class="l-container">
         <div class="nav-brand">
           <a href="#"></a>
