--- a/examples/screenshots/list-table-error.html
+++ b/examples/screenshots/list-table-error.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
-<body style="background: #fff;">
+<body class="responsive" style="background: #fff;">
   <div class="list-table list-table-stretched">
     <table>
       <thead>
