--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
-<body style="background: #fff;">
+<body class="responsive" style="background: #fff;">
   <div style="padding: 40px;">
     <div class="dropdown">
       <a href="#" class="btn dropdown-toggle">Action Menu (Hidden)</a>
