--- a/examples/screenshots/nav-tabs.html
+++ b/examples/screenshots/nav-tabs.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
-<body style="background: #fff; padding: 50px;">
+<body class="responsive" style="background: #fff; padding: 50px;">
   <ul class="nav nav-tabs">
     <li><a href="#one">One <span class="quiet">(1)</span></a></li>
     <li class="active"><a href="#two">Two <span class="quiet">(2)</span></a></li>
