adding .panel class to .main > .content
breaking change

--- a/examples/screenshots/content-full.html
+++ b/examples/screenshots/content-full.html
@@ -37,7 +37,7 @@
     <div class="l-body">
       <div class="l-container">
         <div class="main">
-          <div class="content">
+          <div class="content panel">
           </div>
         </div>
       </div>
