--- a/examples/demos/grid.html
+++ b/examples/demos/grid.html
@@ -54,7 +54,7 @@
               </div>
             </div>
           </div>
-          <div class="content">
+          <div class="content panel">
             <div class="inner">
               <p>12 column grid</p>
               <div class="row">
