--- a/examples/demos/layout.html
+++ b/examples/demos/layout.html
@@ -38,7 +38,7 @@
     <div class="l-body">
       <div class="l-container">
         <div class="main">
-          <div class="content">
+          <div class="content panel">
             <div class="inner">
               <h1>Typography</h1>
               <h2>Typography</h2>
