--- a/examples/screenshots/sidebar-left.html
+++ b/examples/screenshots/sidebar-left.html
@@ -53,7 +53,7 @@
             <div class="inner">
             </div>
           </div>
-          <div class="content">
+          <div class="content panel">
             <div class="inner">
             </div>
           </div>
