--- a/examples/screenshots/forms.html
+++ b/examples/screenshots/forms.html
@@ -78,6 +78,12 @@
       <input type="text" class="input-large"><br>
       <input type="text" class="input-xlarge"><br>
       <input type="text" class="input-xxlarge"><br>
+      <textarea class="input-mini"></textarea><br>
+      <textarea class="input-small"></textarea><br>
+      <textarea class="input-medium"></textarea><br>
+      <textarea class="input-large"></textarea><br>
+      <textarea class="input-xlarge"></textarea><br>
+      <textarea class="input-xxlarge"></textarea><br>
     </fieldset>
   </form>
   <form class="form-horizontal">
@@ -131,6 +137,12 @@
             <option>One</option>
             <option>One</option>
           </select>
+        </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label">Six</label>
+        <div class="controls">
+          <textarea></textarea>
         </div>
       </div>
       <div class="control-group error">
