[Bug][166] Add buttons to table screenshot tests.

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -57,7 +57,7 @@
         <tr>
           <td class="table-status table-status-ok"></td>
           <td><a href="#">Body</a></td>
-          <td>Body</td>
+          <td><a class="btn">Button</a></td>
           <td>Body</td>
           <td>Body</td>
           <td>Body</td>
@@ -75,7 +75,7 @@
         <tr>
           <td class="table-status table-status-error"></td>
           <td><a href="#">Body</a></td>
-          <td>Body</td>
+          <td><a class="btn">Button</a></td>
           <td>Body</td>
           <td>Body</td>
           <td>Body</td>
@@ -93,7 +93,7 @@
         <tr>
           <td class="table-status table-status-warning"></td>
           <td><a href="#">Body</a></td>
-          <td>Body</td>
+          <td><a class="btn">Button</a></td>
           <td>Body</td>
           <td>Body</td>
           <td>Body</td>
@@ -111,7 +111,7 @@
         <tr>
           <td class="table-status table-status-ok"></td>
           <td><a href="#">Body</a></td>
-          <td>Body</td>
+          <td><a class="btn">Button</a></td>
           <td>Body</td>
           <td>Body</td>
           <td>Body</td>
@@ -129,7 +129,7 @@
         <tr>
           <td class="table-status table-status-error"></td>
           <td><a href="#">Body</a></td>
-          <td>Body</td>
+          <td><a class="btn">Button</a></td>
           <td>Body</td>
           <td>Body</td>
           <td>Body</td>
