[Feature][40] Add cog button.

--- a/examples/screenshots/buttons.html
+++ b/examples/screenshots/buttons.html
@@ -97,5 +97,27 @@
     <a class="btn btn-link disabled">Disabled</a>
     <a class="btn btn-link hover">Hover</a>
   </p>
+  <!-- ACTION COG -->
+  <!-- Button Tag -->
+  <p>
+    <button class="cog"></button>
+    <button class="cog active"></button>
+    <button class="cog disabled"></button>
+    <button class="cog hover"></button>
+  </p>
+  <!-- Input Tag -->
+  <p>
+    <input class="cog" type="button">
+    <input class="cog active" type="button">
+    <input class="cog disabled" type="button">
+    <input class="cog hover" type="button">
+  </p>
+  <!-- Anchor Tag -->
+  <p>
+    <a class="cog"></a>
+    <a class="cog active"></a>
+    <a class="cog disabled"></a>
+    <a class="cog hover"></a>
+  </p>
 </body>
 </html>
