[Feature][106] Add action buttons.

--- a/examples/screenshots/buttons.html
+++ b/examples/screenshots/buttons.html
@@ -97,6 +97,53 @@
     <a class="btn btn-link disabled">Disabled</a>
     <a class="btn btn-link hover">Hover</a>
   </p>
+  <!-- ACTION BUTTONS -->
+  <!-- Button Tag -->
+  <p>
+    <button class="btn btn-action">
+      <span class="cog"></span>
+      Default
+      <span class="caret"></span>
+    </button>
+    <button class="btn btn-action active">
+      <span class="cog"></span>
+      Active
+      <span class="caret"></span>
+    </button>
+    <button class="btn btn-action disabled">
+      <span class="cog"></span>
+      Disabled
+      <span class="caret"></span>
+    </button>
+    <button class="btn btn-action hover">
+      <span class="cog"></span>
+      Hover
+      <span class="caret"></span>
+    </button>
+  </p>
+  <!-- Anchor Tag -->
+  <p>
+    <a class="btn btn-action">
+      <span class="cog"></span>
+      Default
+      <span class="caret"></span>
+    </a>
+    <a class="btn btn-action active">
+      <span class="cog"></span>
+      Active
+      <span class="caret"></span>
+    </a>
+    <a class="btn btn-action disabled">
+      <span class="cog"></span>
+      Disabled
+      <span class="caret"></span>
+    </a>
+    <a class="btn btn-action hover">
+      <span class="cog"></span>
+      Hover
+      <span class="caret"></span>
+    </a>
+  </p>
   <!-- ACTION COG -->
   <!-- Button Tag -->
   <p>
