--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -13,7 +13,15 @@
     <div class="nav-utility fixed-top">
       <div class="l-container">
         <ul class="nav">
-          <li><a href="#">Link One</a></li>
+          <li class="dropdown utility-dropdown active">
+            <a href="#">Link One</a>
+            <ul class="dropdown-menu visible">
+              <li><a href="#">One</a></li>
+              <li><a href="#">Two</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Three</a></li>
+            </ul>
+          </li>
           <li><a href="#">Link Two</a></li>
           <li><a href="#">Link Three</a></li>
         </ul>
