--- a/examples/demos/index.html
+++ b/examples/demos/index.html
@@ -16,6 +16,13 @@
   <h5>Typography</h5>
   <h6>Typography</h6>
 
+  <h1 class="rs-page-title">Typography</h1>
+  <h2 class="rs-page-title">Typography</h2>
+  <h3 class="rs-page-title">Typography</h3>
+  <h4 class="rs-page-title">Typography</h4>
+  <h5 class="rs-page-title">Typography</h5>
+  <h6 class="rs-page-title">Typography</h6>
+
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   tempor <strong>incididunt ut labore</strong> et dolore magna aliqua. Ut enim ad minim veniam,
   quis nostrud exercitation <em>ullamco laboris nisi</em> ut aliquip ex ea commodo
