Prefix button classes.

--- a/examples/functional/menu.html
+++ b/examples/functional/menu.html
@@ -28,11 +28,11 @@
 <body class="responsive" >
   <div class="container">
     <div class="controls">
-      <button class="btn" onclick="javascript: attach();">Attach</button>
+      <button class="rs-btn" onclick="javascript: attach();">Attach</button>
     </div>
     <hr>
     <div class="dropdown">
-      <a class="btn dropdown-toggle">I'm the toggle.</a>
+      <a class="rs-btn dropdown-toggle">I'm the toggle.</a>
       <ul class="dropdown-menu">
         <li><span class="dropdown-category">Category</span></li>
         <li><a href="#">Menu Item</a></li>
