--- a/examples/functional/tooltip.html
+++ b/examples/functional/tooltip.html
@@ -28,9 +28,9 @@
 <body class="responsive">
   <div class="container">
     <div class="controls">
-      <button class="btn" onclick="javascript: attach();">Attach</button>
-      <button class="btn" onclick="javascript: show();">Show</button>
-      <button class="btn" onclick="javascript: hide();">Hide</button>
+      <button class="rs-btn" onclick="javascript: attach();">Attach</button>
+      <button class="rs-btn" onclick="javascript: show();">Show</button>
+      <button class="rs-btn" onclick="javascript: hide();">Hide</button>
     </div>
     <i class="icon-help" title="I'm a tooltip."></i>
   </div>
