--- a/examples/screenshots/buttons.html
+++ b/examples/screenshots/buttons.html
@@ -12,159 +12,159 @@
   <!-- DEFAULT BUTTONS -->
   <!-- Button Tag -->
   <p>
-    <button class="btn">Default</button>
-    <button class="btn active">Active</button>
-    <button class="btn disabled">Disabled</button>
-    <button class="btn hover">Hover</button>
+    <button class="rs-btn">Default</button>
+    <button class="rs-btn active">Active</button>
+    <button class="rs-btn disabled">Disabled</button>
+    <button class="rs-btn hover">Hover</button>
   </p>
   <!-- Input Tag -->
   <p>
-    <input class="btn" type="button" value="Default">
-    <input class="btn active" type="button" value="Active">
-    <input class="btn disabled" type="button" value="Disabled">
-    <input class="btn hover" type="button" value="Hover">
+    <input class="rs-btn" type="button" value="Default">
+    <input class="rs-btn active" type="button" value="Active">
+    <input class="rs-btn disabled" type="button" value="Disabled">
+    <input class="rs-btn hover" type="button" value="Hover">
   </p>
   <!-- Anchor Tag -->
   <p>
-    <a class="btn">Default</a>
-    <a class="btn active">Active</a>
-    <a class="btn disabled">Disabled</a>
-    <a class="btn hover">Hover</a>
+    <a class="rs-btn">Default</a>
+    <a class="rs-btn active">Active</a>
+    <a class="rs-btn disabled">Disabled</a>
+    <a class="rs-btn hover">Hover</a>
   </p>
   <!-- PRIMARY BUTTONS -->
   <!-- Button Tag -->
   <p>
-    <button class="btn btn-primary">Default</button>
-    <button class="btn btn-primary active">Active</button>
-    <button class="btn btn-primary disabled">Disabled</button>
-    <button class="btn btn-primary hover">Hover</button>
+    <button class="rs-btn rs-btn-primary">Default</button>
+    <button class="rs-btn rs-btn-primary active">Active</button>
+    <button class="rs-btn rs-btn-primary disabled">Disabled</button>
+    <button class="rs-btn rs-btn-primary hover">Hover</button>
   </p>
   <!-- Input Tag -->
   <p>
-    <input class="btn btn-primary" type="button" value="Default">
-    <input class="btn btn-primary active" type="button" value="Active">
-    <input class="btn btn-primary disabled" type="button" value="Disabled">
-    <input class="btn btn-primary hover" type="button" value="Hover">
+    <input class="rs-btn rs-btn-primary" type="button" value="Default">
+    <input class="rs-btn rs-btn-primary active" type="button" value="Active">
+    <input class="rs-btn rs-btn-primary disabled" type="button" value="Disabled">
+    <input class="rs-btn rs-btn-primary hover" type="button" value="Hover">
   </p>
   <!-- Anchor Tag -->
   <p>
-    <a class="btn btn-primary">Default</a>
-    <a class="btn btn-primary active">Active</a>
-    <a class="btn btn-primary disabled">Disabled</a>
-    <a class="btn btn-primary hover">Hover</a>
+    <a class="rs-btn rs-btn-primary">Default</a>
+    <a class="rs-btn rs-btn-primary active">Active</a>
+    <a class="rs-btn rs-btn-primary disabled">Disabled</a>
+    <a class="rs-btn rs-btn-primary hover">Hover</a>
   </p>
   <!-- LOGIN BUTTONS -->
   <!-- Button Tag -->
   <p>
-    <button class="btn btn-login">Default</button>
-    <button class="btn btn-login active">Active</button>
-    <button class="btn btn-login disabled">Disabled</button>
-    <button class="btn btn-login hover">Hover</button>
+    <button class="rs-btn rs-btn-login">Default</button>
+    <button class="rs-btn rs-btn-login active">Active</button>
+    <button class="rs-btn rs-btn-login disabled">Disabled</button>
+    <button class="rs-btn rs-btn-login hover">Hover</button>
   </p>
   <!-- Input Tag -->
   <p>
-    <input class="btn btn-login" type="button" value="Default">
-    <input class="btn btn-login active" type="button" value="Active">
-    <input class="btn btn-login disabled" type="button" value="Disabled">
-    <input class="btn btn-login hover" type="button" value="Hover">
+    <input class="rs-btn rs-btn-login" type="button" value="Default">
+    <input class="rs-btn rs-btn-login active" type="button" value="Active">
+    <input class="rs-btn rs-btn-login disabled" type="button" value="Disabled">
+    <input class="rs-btn rs-btn-login hover" type="button" value="Hover">
   </p>
   <!-- Anchor Tag -->
   <p>
-    <a class="btn btn-login">Default</a>
-    <a class="btn btn-login active">Active</a>
-    <a class="btn btn-login disabled">Disabled</a>
-    <a class="btn btn-login hover">Hover</a>
+    <a class="rs-btn rs-btn-login">Default</a>
+    <a class="rs-btn rs-btn-login active">Active</a>
+    <a class="rs-btn rs-btn-login disabled">Disabled</a>
+    <a class="rs-btn rs-btn-login hover">Hover</a>
   </p>
   <!-- LINK BUTTONS -->
   <!-- Button Tag -->
   <p>
-    <button class="btn btn-link">Default</button>
-    <button class="btn btn-link active">Active</button>
-    <button class="btn btn-link disabled">Disabled</button>
-    <button class="btn btn-link hover">Hover</button>
+    <button class="rs-btn rs-btn-link">Default</button>
+    <button class="rs-btn rs-btn-link active">Active</button>
+    <button class="rs-btn rs-btn-link disabled">Disabled</button>
+    <button class="rs-btn rs-btn-link hover">Hover</button>
   </p>
   <!-- Input Tag -->
   <p>
-    <input class="btn btn-link" type="button" value="Default">
-    <input class="btn btn-link active" type="button" value="Active">
-    <input class="btn btn-link disabled" type="button" value="Disabled">
-    <input class="btn btn-link hover" type="button" value="Hover">
+    <input class="rs-btn rs-btn-link" type="button" value="Default">
+    <input class="rs-btn rs-btn-link active" type="button" value="Active">
+    <input class="rs-btn rs-btn-link disabled" type="button" value="Disabled">
+    <input class="rs-btn rs-btn-link hover" type="button" value="Hover">
   </p>
   <!-- Anchor Tag -->
   <p>
-    <a class="btn btn-link">Default</a>
-    <a class="btn btn-link active">Active</a>
-    <a class="btn btn-link disabled">Disabled</a>
-    <a class="btn btn-link hover">Hover</a>
+    <a class="rs-btn rs-btn-link">Default</a>
+    <a class="rs-btn rs-btn-link active">Active</a>
+    <a class="rs-btn rs-btn-link disabled">Disabled</a>
+    <a class="rs-btn rs-btn-link hover">Hover</a>
   </p>
   <!-- ACTION BUTTONS -->
   <!-- Button Tag -->
   <p>
-    <button class="btn btn-action">
-      <span class="cog"></span>
+    <button class="rs-btn rs-btn-action">
+      <span class="rs-cog"></span>
       Default
-      <span class="caret"></span>
+      <span class="rs-caret"></span>
     </button>
-    <button class="btn btn-action active">
-      <span class="cog"></span>
+    <button class="rs-btn rs-btn-action active">
+      <span class="rs-cog"></span>
       Active
-      <span class="caret"></span>
+      <span class="rs-caret"></span>
     </button>
-    <button class="btn btn-action disabled">
-      <span class="cog"></span>
+    <button class="rs-btn rs-btn-action disabled">
+      <span class="rs-cog"></span>
       Disabled
-      <span class="caret"></span>
+      <span class="rs-caret"></span>
     </button>
-    <button class="btn btn-action hover">
-      <span class="cog"></span>
+    <button class="rs-btn rs-btn-action hover">
+      <span class="rs-cog"></span>
       Hover
-      <span class="caret"></span>
+      <span class="rs-caret"></span>
     </button>
   </p>
   <!-- Anchor Tag -->
   <p>
-    <a class="btn btn-action">
-      <span class="cog"></span>
+    <a class="rs-btn rs-btn-action">
+      <span class="rs-cog"></span>
       Default
-      <span class="caret"></span>
+      <span class="rs-caret"></span>
     </a>
-    <a class="btn btn-action active">
-      <span class="cog"></span>
+    <a class="rs-btn rs-btn-action active">
+      <span class="rs-cog"></span>
       Active
-      <span class="caret"></span>
+      <span class="rs-caret"></span>
     </a>
-    <a class="btn btn-action disabled">
-      <span class="cog"></span>
+    <a class="rs-btn rs-btn-action disabled">
+      <span class="rs-cog"></span>
       Disabled
-      <span class="caret"></span>
+      <span class="rs-caret"></span>
     </a>
-    <a class="btn btn-action hover">
-      <span class="cog"></span>
+    <a class="rs-btn rs-btn-action hover">
+      <span class="rs-cog"></span>
       Hover
-      <span class="caret"></span>
+      <span class="rs-caret"></span>
     </a>
   </p>
   <!-- ACTION COG -->
   <!-- Button Tag -->
   <p>
-    <button class="cog"></button>
-    <button class="cog active"></button>
-    <button class="cog disabled"></button>
-    <button class="cog hover"></button>
+    <button class="rs-cog"></button>
+    <button class="rs-cog active"></button>
+    <button class="rs-cog disabled"></button>
+    <button class="rs-cog hover"></button>
   </p>
   <!-- Input Tag -->
   <p>
-    <input class="cog" type="button">
-    <input class="cog active" type="button">
-    <input class="cog disabled" type="button">
-    <input class="cog hover" type="button">
+    <input class="rs-cog" type="button">
+    <input class="rs-cog active" type="button">
+    <input class="rs-cog disabled" type="button">
+    <input class="rs-cog hover" type="button">
   </p>
   <!-- Anchor Tag -->
   <p>
-    <a class="cog"></a>
-    <a class="cog active"></a>
-    <a class="cog disabled"></a>
-    <a class="cog hover"></a>
+    <a class="rs-cog"></a>
+    <a class="rs-cog active"></a>
+    <a class="rs-cog disabled"></a>
+    <a class="rs-cog hover"></a>
   </p>
 </body>
 </html>
