--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -11,7 +11,7 @@
 <body class="responsive" style="background: #fff;">
   <div style="padding: 40px;">
     <div class="dropdown">
-      <a href="#" class="btn dropdown-toggle">Action Menu (Hidden)</a>
+      <a href="#" class="rs-btn dropdown-toggle">Action Menu (Hidden)</a>
       <ul class="dropdown-menu">
         <li><span class="dropdown-category">Links</span></li>
         <li><a href="#">One</a></li>
@@ -22,7 +22,7 @@
       </ul>
     </div>
     <div class="dropdown">
-      <a href="#" class="btn dropdown-toggle">Action Menu (Visible)</a>
+      <a href="#" class="rs-btn dropdown-toggle">Action Menu (Visible)</a>
       <ul class="dropdown-menu visible">
         <li><span class="dropdown-category">Links</span></li>
         <li><a href="#">One</a></li>
@@ -33,7 +33,7 @@
       </ul>
     </div>
     <div class="dropdown utility-dropdown">
-      <a href="#" class="btn dropdown-toggle">Utility Menu (Hidden)</a>
+      <a href="#" class="rs-btn dropdown-toggle">Utility Menu (Hidden)</a>
       <ul class="dropdown-menu">
         <li><span>Non Link Text</span></li>
         <li class="divider"></li>
@@ -48,7 +48,7 @@
       </ul>
     </div>
     <div class="dropdown utility-dropdown">
-      <a href="#" class="btn dropdown-toggle">Utility Menu (Visible)</a>
+      <a href="#" class="rs-btn dropdown-toggle">Utility Menu (Visible)</a>
       <ul class="dropdown-menu visible">
         <li><span>Non Link Text</span></li>
         <li class="divider"></li>
@@ -63,7 +63,7 @@
       </ul>
     </div>
     <div class="dropdown primary-dropdown">
-      <a href="#" class="btn dropdown-toggle">Primary Menu (Hidden)</a>
+      <a href="#" class="rs-btn dropdown-toggle">Primary Menu (Hidden)</a>
       <ul class="dropdown-menu">
         <li><span class="dropdown-category">Links</span></li>
         <li><a href="#">Link</a></li>
@@ -77,7 +77,7 @@
       </ul>
     </div>
     <div class="dropdown primary-dropdown">
-      <a href="#" class="btn dropdown-toggle">Primary Menu (Visible)</a>
+      <a href="#" class="rs-btn dropdown-toggle">Primary Menu (Visible)</a>
       <ul class="dropdown-menu visible">
         <li><span class="dropdown-category">Links</span></li>
         <li><a href="#">Link</a></li>
